2002-02-05  ARISAWA Akihiro  <ari@mbf.sphere.ne.jp>

	* w3m.el (w3m-touch-file): Call touch command with "-t time"
	instead of "-d time".

2002-02-05  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m.el (w3m-touch-command): New option.
	(w3m-touch-file): New function.
	(w3m-download): Call it.
	(w3m-toggle-inline-images-internal): Fix inconsistency of text
	properties when images are not downloaded.
	(w3m-toggle-inline-image): Simplified.
	(w3m-toggle-inline-images): Ditto.

2002-02-04  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-util.el (w3m-prin1): New function.
	* w3m.el (w3m-save-list): Use it instead of `prin1'.

	* w3mhack.el, w3m.el, w3m-xmas.el, w3m-om.el: Say emacs-w3m not
	Emacs-W3M.

2002-02-04  Katsumi Yamaoka  <yamaoka@jpl.org>

	* mime-w3m.el (mime-w3m-mode-dont-bind-keys): New variable.
	(mime-setup-w3m): Don't bind keys listed in the above.

	* w3m.el (w3m-key-binding): Switch key bindings also in w3m-mode
	buffers when customizing; don't manipulate keymaps when Emacs is
	running in the batch mode.

2002-02-01  Yuuichi Teranishi  <teranisi@gohome.org>

	* octet.el (octet-suffix-type-alist): Added lzh, tar, pdf.
	(octet-type-filter-alist): Ditto.
	(octet-content-type-alist): Added application/x-msexcel,
	text/html, application/x-tar, application/pdf.
	(octet-magic-type-alist): Fixed magic for html.
	(octet-tar-mode): New function.
	(octet-guess-type-from-name): Downcase suffix.
	(octet-mime-setup): Add action for application/vnd.ms-powerpoint.

2002-02-01  Katsumi Yamaoka  <yamaoka@jpl.org>

	* mime-w3m.el (mime-w3m-safe-url-regexp): New user option.
	(mime-w3m-preview-text/html): Use it.

	* w3m.el (w3m-key-binding): Don't eval a part of the `set:' form
	when compiling nnshimbun.el in the Gnus source tree.

2002-02-01  Yuuichi Teranishi  <teranisi@gohome.org>

	* octet.el (octet-buffer): Fixed problem when 'Quit'.
	(mime-preview-octet-hook): New hook.
	(mime-preview-octet): Run it.
	(w3m-about-octet-attachments): Fixed problem when there's